[project]
name = "wordle-tutor"
description = "Game environment for Wordle Tutor"
tags = ["textarena", "multi-turn", "reasoning", "game", "train", "eval"]
version = "0.1.0"
dependencies = [
    "verifiers>=0.1.2.post0",
    "nltk",
    "textarena",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["wordle-tutor.py"]